--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-//spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/studentsdb?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
